removed unused citations - made corrections in wrong fitted text

--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -355,7 +355,7 @@ One of the most used classifiers for addressing TSA is the SVM classifier. Bakli
 Lexicon-based methods leverage lists of words annotated by polarity or polarity score to determine the overall opinion score of a given text. The main advantage of these methods is that they do not require training data. Lexicon-based approaches have been extensively applied on conventional text such as blogs, forums, and product reviews. However, they are less explored in TSA compared to machine-learning methods. The main reason is the uniqueness of the text on Twitter that not only contains a large number of textual peculiarities and
 colloquial expressions such as \textit{yolo} and \textit{gr8} but also has a dynamic nature with new expressions and hashtags emerging from time to time. 
 \par
-Ortega et al. 2013 \cite{Bueno2013SSAUOUS} proposed a three-step technique for TSA. Pre-processing was performed in the first step and polarity detection in the second step. In the last step, they performed rule-based classification. Polarity detection and rule-based classification were based on WordNet and SentiWordNet. Their approach managed to achieve good results when evaluated on the SemEval-2013 dataset \cite{nakov-EtAl:2013:SemEval-2013}. However,the authors did not compare their method with existing techniques to prove its effectiveness. \cite{dang2010lexicon} introduced some new sentiment features. The results showed that adding these newly created features, which are often used in the existing semantic-orientation approach, and the content-free and content-specific features that come from the existing machine-learning approach can improve sentiment-classification performance significantly.
+Ortega et al. 2013 \cite{Bueno2013SSAUOUS} proposed a three-step technique for TSA. Pre-processing was performed in the first step and polarity detection in the second step. In the last step, they performed rule-based classification. Polarity detection and rule-based classification were based on WordNet and SentiWordNet. Their approach managed to achieve good results when evaluated on the SemEval-2013 dataset \cite{nakov-EtAl:2013:SemEval-2013}. However,the authors did not compare their method with existing techniques to prove its effectiveness. \cite{dang2010lexicon} introduced some new sentiment features. The results showed that adding these newly created features, which are often used in the existing semantic-orientation approach, and the content-free and content-specific features that come from the existing machine-learning approach can improve sentiment - classification performance significantly.
 
 \begin{figure}[h]
 	\includegraphics[scale=0.60]{lexicon-token}
@@ -500,6 +500,6 @@ The model that is proposed finds that using a maximum likelihood approach with t
 
 \bibliographystyle{abbrv}
 \bibliography{sigproc}  % sigproc.bib is the name of the Bibliography in this case
-\nocite{*} %auto einai gia na bgazei to reference xwris na xreiazetai na to kanoume cite kapou.
+%\nocite{*} %auto einai gia na bgazei to reference xwris na xreiazetai na to kanoume cite kapou.
 
 \end{document}
