added sentiment conclusion

--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -496,6 +496,8 @@ The model that is proposed finds that using a maximum likelihood approach with t
 
 %ACKNOWLEDGMENTS are optional
 \section{Conclusions}
+Recent years have witnessed an increasing research interest in analyzing tweets. This interest is a result of the large amount of messages that are posted everyday in Twitter and that contain valuable information for a number of different topics. Methods from the machine-learning field are applied for TSA on a more frequent rate compared to the rest of the approaches, with the SVM and NB classifiers being the most prevalent. Unigram-based SVM is usually considered as a baseline to which the proposed methods are compared. Moreover, lexicons are utilized in a large set of proposed methods to support detecting words that indicate sentiment. SentiWordNet and MPQA are the most used lexicons
+that are usually extended with words that are used in Twitter.
 
 
 \bibliographystyle{abbrv}
